align form submit button and correct social link icon display

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+body{
+  padding: 0;
+  margin: auto;
+}
 .container {
   width: 375px;
-  margin: 0 auto;
+  margin: auto;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -48,7 +52,7 @@ header nav .toolbar {
   background-size: 168px;
 }
 
-h1 {
+h1, h2 {
   font-size: 56px;
   line-height: 64px;
   color: #ff6b00;
@@ -449,6 +453,8 @@ textarea {
     height: 100%;
     width: 80%;
     margin: auto;
+    margin-left: 124px;
+    
   }
 
   header nav .toolbar ul {
@@ -683,11 +689,27 @@ textarea {
     text-align: left;
     justify-content: left;
   }
+  .contact h2 {
+    font-size: 56px;
+    line-height: 64px;
+    color: #ff6b00;
+    font-family: 'Crete Round', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.376px;
+    text-align: left;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
 
   .contact form {
     box-sizing: border-box;
     max-width: 680px;
-    flex-basis: 60%;
+    flex-basis: 60%;    
+  }
+
+  .contact form button{
+    margin-left: 0;
+   
   }
 
   .contact h3 {
